@@ -1,3 +1,8 @@
+2002-12-02  Larry Jones  <lawrence.jones@eds.com>
+
+	* commit.c (commit): Strip leading zeros from numeric revision
+	in addition to trailing dots.
+
 2002-11-22  Larry Jones  <lawrence.jones@eds.com>
 
 	* sanity.sh: Note that the tests run for a long time.
